crates/tankan/tests/snapshots/corpus_test__svg_flowchart_05-edge-labels.snap
---
source: crates/tankan/tests/corpus_test.rs
expression: svg
---
<svg class="tankan tankan-flowchart" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 82.5 768.5" width="82.5" height="768.5" role="img" aria-label="Flowchart" font-family="sans-serif" font-size="14">
<style>
.tankan text { fill: #1f2328; }
.tankan .tk-node { fill: #f6f8fa; stroke: #d1d9e0; }
.tankan .tk-node-line { stroke: #d1d9e0; fill: none; }
.tankan .tk-edge { stroke: #1f2328; fill: none; }
.tankan .tk-head-fill { fill: #1f2328; }
.tankan .tk-head-line { stroke: #1f2328; fill: none; stroke-width: 1.5; }
.tankan .tk-edge-label rect { fill: #ffffff; stroke: none; }
.tankan .tk-cluster { fill: #f6f8fa; fill-opacity: 0.4; stroke: #d1d9e0; }
.tankan .tk-cluster-title { fill: #59636e; }
.tankan .tk-region { fill: none; stroke: #d1d9e0; stroke-dasharray: 4,4; }
.tankan .tk-state-dot { fill: #1f2328; stroke: none; }
.tankan .tk-notebox { fill: #f6f8fa; stroke: #d1d9e0; stroke-dasharray: 3,3; }
</style>
<defs>
<marker id="tk-arrow" viewBox="0 0 10 10" refX="9" refY="5" markerWidth="7" markerHeight="7" orient="auto-start-reverse"><path class="tk-head-fill" d="M0,0 L10,5 L0,10 z"/></marker>
<marker id="tk-circle" viewBox="0 0 10 10" refX="5" refY="5" markerWidth="9" markerHeight="9" orient="auto"><circle class="tk-head-fill" cx="5" cy="5" r="4"/></marker>
<marker id="tk-cross" viewBox="0 0 10 10" refX="5" refY="5" markerWidth="9" markerHeight="9" orient="auto"><path class="tk-head-line" d="M1,1 L9,9 M9,1 L1,9"/></marker>
</defs>
<path class="tk-edge" d="M 40,63.5 L 40,121.5 Q 40,127.5 40,133.5 L 40,191" marker-end="url(#tk-arrow)"/>
<g class="tk-edge-label">
<rect class="" x="25" y="115.5" width="30.5" height="23.5"/>
<text class="" x="40" y="129.5" text-anchor="middle">text</text>
</g>
<path class="tk-edge" d="M 40,235 L 40,292.5 Q 40,298.5 40,304.5 L 40,362.5" marker-end="url(#tk-arrow)"/>
<g class="tk-edge-label">
<rect class="" x="25" y="287" width="30.5" height="23.5"/>
<text class="" x="40" y="300.5" text-anchor="middle">text</text>
</g>
<path class="tk-edge" d="M 40,406 L 40,464 Q 40,470 40,476 L 40,533.5" stroke-dasharray="3,3" marker-end="url(#tk-arrow)"/>
<g class="tk-edge-label">
<rect class="" x="25" y="458" width="30.5" height="23.5"/>
<text class="" x="40" y="472" text-anchor="middle">text</text>
</g>
<path class="tk-edge" d="M 40,577 L 40,635 Q 40,641 40,647 L 40,705" stroke-width="3" marker-end="url(#tk-arrow)"/>
<g class="tk-edge-label">
<rect class="" x="25" y="629" width="30.5" height="23.5"/>
<text class="" x="40" y="643" text-anchor="middle">text</text>
</g>
<rect class="tk-node" x="20" y="20" width="40" height="43.5"/>
<text class="tk-node-label" x="40" y="44" text-anchor="middle">A</text>
<rect class="tk-node" x="20" y="191" width="40" height="43.5"/>
<text class="tk-node-label" x="40" y="215" text-anchor="middle">B</text>
<rect class="tk-node" x="20" y="362.5" width="40" height="43.5"/>
<text class="tk-node-label" x="40" y="386.5" text-anchor="middle">C</text>
<rect class="tk-node" x="20" y="533.5" width="40" height="43.5"/>
<text class="tk-node-label" x="40" y="557.5" text-anchor="middle">D</text>
<rect class="tk-node" x="20" y="705" width="40" height="43.5"/>
<text class="tk-node-label" x="40" y="728.5" text-anchor="middle">E</text>
</svg>
