crates/tankan/tests/snapshots/corpus_test__svg_flowchart_07-subgraph.snap
---
source: crates/tankan/tests/corpus_test.rs
expression: svg
---
<svg class="tankan tankan-flowchart" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 360 604.5" width="360" height="604.5" role="img" aria-label="Flowchart" font-family="sans-serif" font-size="14">
<style>
.tankan text { fill: #1f2328; }
.tankan .tk-node { fill: #f6f8fa; stroke: #d1d9e0; }
.tankan .tk-node-line { stroke: #d1d9e0; fill: none; }
.tankan .tk-edge { stroke: #1f2328; fill: none; }
.tankan .tk-head-fill { fill: #1f2328; }
.tankan .tk-head-line { stroke: #1f2328; fill: none; stroke-width: 1.5; }
.tankan .tk-edge-label rect { fill: #ffffff; stroke: none; }
.tankan .tk-cluster { fill: #f6f8fa; fill-opacity: 0.4; stroke: #d1d9e0; }
.tankan .tk-cluster-title { fill: #59636e; }
</style>
<defs>
<marker id="tk-arrow" viewBox="0 0 10 10" refX="9" refY="5" markerWidth="7" markerHeight="7" orient="auto-start-reverse"><path class="tk-head-fill" d="M0,0 L10,5 L0,10 z"/></marker>
<marker id="tk-circle" viewBox="0 0 10 10" refX="5" refY="5" markerWidth="9" markerHeight="9" orient="auto"><circle class="tk-head-fill" cx="5" cy="5" r="4"/></marker>
<marker id="tk-cross" viewBox="0 0 10 10" refX="5" refY="5" markerWidth="9" markerHeight="9" orient="auto"><path class="tk-head-line" d="M1,1 L9,9 M9,1 L1,9"/></marker>
</defs>
<rect class="tk-cluster" x="238.5" y="20" width="101.5" height="123.5" rx="4"/>
<text class="tk-cluster-title" x="289" y="36" text-anchor="middle">one</text>
<rect class="tk-cluster" x="219.5" y="367" width="101.5" height="217" rx="4"/>
<text class="tk-cluster-title" x="270.5" y="383" text-anchor="middle">two</text>
<rect class="tk-cluster" x="115.5" y="193.5" width="101" height="123.5" rx="4"/>
<text class="tk-cluster-title" x="166" y="209.5" text-anchor="middle">three</text>
<path class="tk-edge" d="M 270.5,463 L 270.5,513" marker-end="url(#tk-arrow)"/>
<path class="tk-edge" d="M 150.5,103.5 L 58.5,233.5" marker-end="url(#tk-arrow)"/>
<path class="tk-edge" d="M 266.5,108.5 L 65.5,240.5" marker-end="url(#tk-arrow)"/>
<path class="tk-edge" d="M 166,103.5 L 166,245.5" marker-end="url(#tk-arrow)"/>
<path class="tk-edge" d="M 282.5,143.5 L 271,249.5 Q 270.5,255.5 270.5,261.5 L 270.5,367" marker-end="url(#tk-arrow)"/>
<path class="tk-edge" d="M 195,317 L 219.5,368.5" marker-end="url(#tk-arrow)"/>
<path class="tk-edge" d="M 219.5,374.5 L 177,289" marker-end="url(#tk-arrow)"/>
<rect class="tk-node" x="143.5" y="60" width="45" height="43.5"/>
<text class="tk-node-label" x="166" y="84" text-anchor="middle">c1</text>
<rect class="tk-node" x="20" y="233.5" width="45.5" height="43.5"/>
<text class="tk-node-label" x="43" y="257.5" text-anchor="middle">a2</text>
<rect class="tk-node" x="266.5" y="72" width="45.5" height="43.5"/>
<text class="tk-node-label" x="289" y="96" text-anchor="middle">a1</text>
<rect class="tk-node" x="247.5" y="419" width="45.5" height="43.5"/>
<text class="tk-node-label" x="270.5" y="443" text-anchor="middle">b1</text>
<rect class="tk-node" x="247.5" y="513" width="45.5" height="43.5"/>
<text class="tk-node-label" x="270.5" y="536.5" text-anchor="middle">b2</text>
<rect class="tk-node" x="143.5" y="245.5" width="45" height="43.5"/>
<text class="tk-node-label" x="166" y="269.5" text-anchor="middle">c2</text>
</svg>
