crates/tankan/tests/snapshots/corpus_test__svg_flowchart_14-japanese.snap
---
source: crates/tankan/tests/corpus_test.rs
expression: svg
---
<svg class="tankan tankan-flowchart" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 529.5 570" width="529.5" height="570" role="img" aria-label="Flowchart" font-family="sans-serif" font-size="14">
<style>
.tankan text { fill: #1f2328; }
.tankan .tk-node { fill: #f6f8fa; stroke: #d1d9e0; }
.tankan .tk-node-line { stroke: #d1d9e0; fill: none; }
.tankan .tk-edge { stroke: #1f2328; fill: none; }
.tankan .tk-head-fill { fill: #1f2328; }
.tankan .tk-head-line { stroke: #1f2328; fill: none; stroke-width: 1.5; }
.tankan .tk-edge-label rect { fill: #ffffff; stroke: none; }
.tankan .tk-cluster { fill: #f6f8fa; fill-opacity: 0.4; stroke: #d1d9e0; }
.tankan .tk-cluster-title { fill: #59636e; }
</style>
<defs>
<marker id="tk-arrow" viewBox="0 0 10 10" refX="9" refY="5" markerWidth="7" markerHeight="7" orient="auto-start-reverse"><path class="tk-head-fill" d="M0,0 L10,5 L0,10 z"/></marker>
<marker id="tk-circle" viewBox="0 0 10 10" refX="5" refY="5" markerWidth="9" markerHeight="9" orient="auto"><circle class="tk-head-fill" cx="5" cy="5" r="4"/></marker>
<marker id="tk-cross" viewBox="0 0 10 10" refX="5" refY="5" markerWidth="9" markerHeight="9" orient="auto"><path class="tk-head-line" d="M1,1 L9,9 M9,1 L1,9"/></marker>
</defs>
<path class="tk-edge" d="M 395.5,63.5 L 395.5,108 Q 395.5,114 395.5,120 L 395.5,164.5" marker-end="url(#tk-arrow)"/>
<path class="tk-edge" d="M 350,216 L 131.5,296 Q 125.5,298 125.5,304 L 125.5,362" marker-end="url(#tk-arrow)"/>
<g class="tk-edge-label">
<rect class="" x="91.5" y="286.5" width="68.5" height="23.5"/>
<text class="" x="125.5" y="300.5" text-anchor="middle">sequence</text>
</g>
<path class="tk-edge" d="M 395.5,234.5 L 395.5,292 Q 395.5,298 395.5,304 L 395.5,362" marker-end="url(#tk-arrow)"/>
<g class="tk-edge-label">
<rect class="" x="363.5" y="286.5" width="64" height="23.5"/>
<text class="" x="395.5" y="300.5" text-anchor="middle">それ以外</text>
</g>
<path class="tk-edge" d="M 189.5,405.5 L 332,454 Q 337.5,456 341,460.5 L 379.5,508.5" marker-end="url(#tk-arrow)"/>
<path class="tk-edge" d="M 395.5,405.5 L 395.5,450 Q 395.5,456 395.5,462 L 395.5,506.5" marker-end="url(#tk-arrow)"/>
<rect class="tk-node" x="325" y="20" width="140.5" height="43.5"/>
<text class="tk-node-label" x="395.5" y="44" text-anchor="middle">Markdown を書く</text>
<polygon class="tk-node" points="395.5,164.5 481.5,199.5 395.5,234.5 309,199.5"/>
<text class="tk-node-label" x="395.5" y="201.5" text-anchor="middle">図の種類は?</text>
<rect class="tk-node" x="20" y="362" width="211.5" height="43.5"/>
<text class="tk-node-label" x="125.5" y="386" text-anchor="middle">tankan がビルド時に SVG 化</text>
<rect class="tk-node" x="281.5" y="362" width="228.5" height="43.5"/>
<text class="tk-node-label" x="395.5" y="386" text-anchor="middle">mermaid.js でクライアント描画</text>
<rect class="tk-node" x="355.5" y="506.5" width="80" height="43.5" rx="22"/>
<text class="tk-node-label" x="395.5" y="530.5" text-anchor="middle">配信</text>
</svg>
