crates/tankan/tests/snapshots/corpus_test__svg_flowchart_17-class-default.snap
---
source: crates/tankan/tests/corpus_test.rs
expression: svg
---
<svg class="tankan tankan-flowchart" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 80 271" width="80" height="271" role="img" aria-label="Flowchart" font-family="sans-serif" font-size="14">
<style>
.tankan text { fill: #1f2328; }
.tankan .tk-node { fill: #f6f8fa; stroke: #d1d9e0; }
.tankan .tk-node-line { stroke: #d1d9e0; fill: none; }
.tankan .tk-edge { stroke: #1f2328; fill: none; }
.tankan .tk-head-fill { fill: #1f2328; }
.tankan .tk-head-line { stroke: #1f2328; fill: none; stroke-width: 1.5; }
.tankan .tk-edge-label rect { fill: #ffffff; stroke: none; }
.tankan .tk-cluster { fill: #f6f8fa; fill-opacity: 0.4; stroke: #d1d9e0; }
.tankan .tk-cluster-title { fill: #59636e; }
.tankan .tk-region { fill: none; stroke: #d1d9e0; stroke-dasharray: 4,4; }
.tankan .tk-state-dot { fill: #1f2328; stroke: none; }
.tankan .tk-notebox { fill: #f6f8fa; stroke: #d1d9e0; stroke-dasharray: 3,3; }
</style>
<defs>
<marker id="tk-arrow" viewBox="0 0 10 10" refX="9" refY="5" markerWidth="7" markerHeight="7" orient="auto-start-reverse"><path class="tk-head-fill" d="M0,0 L10,5 L0,10 z"/></marker>
<marker id="tk-circle" viewBox="0 0 10 10" refX="5" refY="5" markerWidth="9" markerHeight="9" orient="auto"><circle class="tk-head-fill" cx="5" cy="5" r="4"/></marker>
<marker id="tk-cross" viewBox="0 0 10 10" refX="5" refY="5" markerWidth="9" markerHeight="9" orient="auto"><path class="tk-head-line" d="M1,1 L9,9 M9,1 L1,9"/></marker>
</defs>
<path class="tk-edge" d="M 40,63.5 L 40,113.5" marker-end="url(#tk-arrow)"/>
<path class="tk-edge" d="M 40,157 L 40,207" marker-end="url(#tk-arrow)"/>
<rect class="tk-node" x="20" y="20" width="40" height="43.5" style="fill:#eee;stroke:#999"/>
<text class="tk-node-label" x="40" y="44" text-anchor="middle" style="fill:#1f2328">A</text>
<rect class="tk-node" x="20" y="113.5" width="40" height="43.5" style="fill:#f96;stroke:#333;stroke-width:2px"/>
<text class="tk-node-label" x="40" y="137.5" text-anchor="middle" style="fill:#111">B</text>
<rect class="tk-node" x="20" y="207" width="40" height="43.5" style="fill:#f96;stroke:#333;stroke-width:2px"/>
<text class="tk-node-label" x="40" y="231" text-anchor="middle" style="fill:#111">C</text>
</svg>
