crates/tankan/tests/snapshots/corpus_test__svg_gantt_05-japanese.snap
---
source: crates/tankan/tests/corpus_test.rs
expression: svg
---
<svg class="tankan tankan-gantt" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1004 218" width="1004" height="218" role="img" aria-label="開発スケジュール" font-family="sans-serif" font-size="14">
<style>
.tankan text { fill: #1f2328; }
.tankan .tk-title { font-weight: bold; }
.tankan .tk-section-band { fill: #f6f8fa; opacity: 0.5; }
.tankan .tk-section-label { fill: #59636e; }
.tankan .tk-grid { stroke: #d1d9e0; }
.tankan .tk-axis-label { fill: #59636e; }
.tankan .tk-excluded { fill: #f6f8fa; opacity: 0.7; }
.tankan .tk-task { fill: #f6f8fa; stroke: #d1d9e0; }
.tankan .tk-task-active { fill: #ffffff; stroke: #9a6700; }
.tankan .tk-task-done { fill: #d1d9e0; stroke: #d1d9e0; }
.tankan .tk-task-crit { stroke: #9a6700; stroke-width: 2; }
.tankan .tk-milestone { fill: #9a6700; stroke: #d1d9e0; }
.tankan .tk-task-name-done { fill: #59636e; }
</style>
<text class="tk-section-label" x="8" y="85" text-anchor="start">設計</text>
<rect class="tk-section-band" x="0" y="110" width="1004" height="60"/>
<text class="tk-section-label" x="8" y="145" text-anchor="start">実装</text>
<rect class="tk-excluded" x="221.5" y="50" width="26.5" height="120"/>
<rect class="tk-excluded" x="248" y="50" width="26.5" height="120"/>
<rect class="tk-excluded" x="405.5" y="50" width="26.5" height="120"/>
<rect class="tk-excluded" x="432" y="50" width="26.5" height="120"/>
<rect class="tk-excluded" x="589.5" y="50" width="26.5" height="120"/>
<rect class="tk-excluded" x="616" y="50" width="26.5" height="120"/>
<rect class="tk-excluded" x="773.5" y="50" width="26.5" height="120"/>
<rect class="tk-excluded" x="800" y="50" width="26.5" height="120"/>
<line class="tk-grid" x1="64" y1="170" x2="984" y2="170"/>
<line class="tk-grid" x1="90.5" y1="50" x2="90.5" y2="174"/>
<text class="tk-axis-label" x="90.5" y="190" text-anchor="middle">04-01</text>
<line class="tk-grid" x1="274.5" y1="50" x2="274.5" y2="174"/>
<text class="tk-axis-label" x="274.5" y="190" text-anchor="middle">04-08</text>
<line class="tk-grid" x1="458.5" y1="50" x2="458.5" y2="174"/>
<text class="tk-axis-label" x="458.5" y="190" text-anchor="middle">04-15</text>
<line class="tk-grid" x1="642.5" y1="50" x2="642.5" y2="174"/>
<text class="tk-axis-label" x="642.5" y="190" text-anchor="middle">04-22</text>
<line class="tk-grid" x1="826.5" y1="50" x2="826.5" y2="174"/>
<text class="tk-axis-label" x="826.5" y="190" text-anchor="middle">04-29</text>
<rect class="tk-task tk-task-done" x="90.5" y="53" width="131.5" height="24" rx="3"/>
<text class="tk-task-name tk-task-name-done" x="156" y="70" text-anchor="middle">要件定義</text>
<rect class="tk-task tk-task-active" x="221.5" y="83" width="184" height="24" rx="3"/>
<text class="tk-task-name" x="313.5" y="100" text-anchor="middle">基本設計</text>
<rect class="tk-task" x="458.5" y="113" width="315.5" height="24" rx="3"/>
<text class="tk-task-name" x="616" y="130" text-anchor="middle">実装</text>
<rect class="tk-task" x="773.5" y="143" width="184" height="24" rx="3"/>
<text class="tk-task-name" x="865.5" y="160" text-anchor="middle">受け入れテスト</text>
<text class="tk-title" x="502" y="25" text-anchor="middle">開発スケジュール</text>
</svg>
