crates/tankan/tests/snapshots/corpus_test__svg_mindmap_01-basic.snap
---
source: crates/tankan/tests/corpus_test.rs
expression: svg
---
<svg class="tankan tankan-mindmap" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1184 216" width="1184" height="216" role="img" aria-label="mindmap" font-family="sans-serif" font-size="14">
<style>
.tankan text { fill: #1f2328; }
.tankan .tk-mm-root { fill: #f6f8fa; stroke: #d1d9e0; stroke-width: 1.5; }
.tankan .tk-mm-root-label { font-weight: bold; }
.tankan .tk-mm-node { fill-opacity: 0.15; }
.tankan .tk-mm-b0 { fill: var(--tankan-mindmap-1, #5778a4); stroke: var(--tankan-mindmap-1, #5778a4); }
.tankan .tk-mm-b1 { fill: var(--tankan-mindmap-2, #e49444); stroke: var(--tankan-mindmap-2, #e49444); }
.tankan .tk-mm-b2 { fill: var(--tankan-mindmap-3, #d1615d); stroke: var(--tankan-mindmap-3, #d1615d); }
.tankan .tk-mm-b3 { fill: var(--tankan-mindmap-4, #85b6b2); stroke: var(--tankan-mindmap-4, #85b6b2); }
.tankan .tk-mm-b4 { fill: var(--tankan-mindmap-5, #6a9f58); stroke: var(--tankan-mindmap-5, #6a9f58); }
.tankan .tk-mm-b5 { fill: var(--tankan-mindmap-6, #e7ca60); stroke: var(--tankan-mindmap-6, #e7ca60); }
.tankan .tk-mm-b6 { fill: var(--tankan-mindmap-7, #a87c9f); stroke: var(--tankan-mindmap-7, #a87c9f); }
.tankan .tk-mm-b7 { fill: var(--tankan-mindmap-8, #967662); stroke: var(--tankan-mindmap-8, #967662); }
.tankan .tk-mm-edge { fill: none; stroke-width: 2; stroke-opacity: 0.7; }
</style>
<path class="tk-mm-edge tk-mm-b0" d="M 691.5 108 C 709.5 108 709.5 64.5 727.5 64.5"/>
<path class="tk-mm-edge tk-mm-b1" d="M 610 108 C 592 108 592 108 574 108"/>
<path class="tk-mm-edge tk-mm-b2" d="M 691.5 108 C 709.5 108 709.5 161.5 727.5 161.5"/>
<path class="tk-mm-edge tk-mm-b0" d="M 796 64.5 C 814 64.5 814 33 832 33"/>
<path class="tk-mm-edge tk-mm-b0" d="M 796 64.5 C 814 64.5 814 86 832 86"/>
<path class="tk-mm-edge tk-mm-b0" d="M 944.5 86 C 962.5 86 962.5 86 980.5 86"/>
<path class="tk-mm-edge tk-mm-b1" d="M 490 108 C 472 108 472 42.5 454 42.5"/>
<path class="tk-mm-edge tk-mm-b1" d="M 490 108 C 472 108 472 139.5 454 139.5"/>
<path class="tk-mm-edge tk-mm-b1" d="M 291.5 139.5 C 273.5 139.5 273.5 139.5 255.5 139.5"/>
<path class="tk-mm-edge tk-mm-b1" d="M 199.5 139.5 C 181.5 139.5 181.5 96 163.5 96"/>
<path class="tk-mm-edge tk-mm-b1" d="M 199.5 139.5 C 181.5 139.5 181.5 139.5 163.5 139.5"/>
<path class="tk-mm-edge tk-mm-b1" d="M 199.5 139.5 C 181.5 139.5 181.5 183 163.5 183"/>
<path class="tk-mm-edge tk-mm-b2" d="M 786 161.5 C 804 161.5 804 139.5 822 139.5"/>
<path class="tk-mm-edge tk-mm-b2" d="M 786 161.5 C 804 161.5 804 183 822 183"/>
<circle class="tk-mm-root" cx="651" cy="108" r="41"/>
<text class="tk-mm-root-label" x="651" y="113" text-anchor="middle">mindmap</text>
<rect class="tk-mm-node tk-mm-b0" x="727.5" y="47.5" width="68.5" height="33.5" rx="17"/>
<text class="tk-mm-label" x="762" y="69.5" text-anchor="middle">Origins</text>
<rect class="tk-mm-node tk-mm-b0" x="832" y="16" width="100.5" height="33.5" rx="17"/>
<text class="tk-mm-label" x="882" y="37.5" text-anchor="middle">Long history</text>
<rect class="tk-mm-node tk-mm-b0" x="832" y="69.5" width="112.5" height="33.5" rx="17"/>
<text class="tk-mm-label" x="888.5" y="91" text-anchor="middle">Popularisation</text>
<rect class="tk-mm-node tk-mm-b0" x="980.5" y="59.5" width="187.5" height="53" rx="26.5"/>
<text class="tk-mm-label" x="1074.5" y="81.5" text-anchor="middle">British popular psychology</text>
<text class="tk-mm-label" x="1074.5" y="101" text-anchor="middle">author Tony Buzan</text>
<rect class="tk-mm-node tk-mm-b1" x="490" y="91" width="84" height="33.5" rx="17"/>
<text class="tk-mm-label" x="532" y="113" text-anchor="middle">Research</text>
<rect class="tk-mm-node tk-mm-b1" x="326" y="16" width="128.5" height="53" rx="26.5"/>
<text class="tk-mm-label" x="390" y="37.5" text-anchor="middle">On effectiveness</text>
<text class="tk-mm-label" x="390" y="57.5" text-anchor="middle">and features</text>
<rect class="tk-mm-node tk-mm-b1" x="291.5" y="123" width="162.5" height="33.5" rx="17"/>
<text class="tk-mm-label" x="373" y="144.5" text-anchor="middle">On Automatic creation</text>
<rect class="tk-mm-node tk-mm-b1" x="199.5" y="123" width="56" height="33.5" rx="17"/>
<text class="tk-mm-label" x="227.5" y="144.5" text-anchor="middle">Uses</text>
<rect class="tk-mm-node tk-mm-b1" x="16" y="79" width="147.5" height="33.5" rx="17"/>
<text class="tk-mm-label" x="90" y="101" text-anchor="middle">Creative techniques</text>
<rect class="tk-mm-node tk-mm-b1" x="27.5" y="123" width="136" height="33.5" rx="17"/>
<text class="tk-mm-label" x="95.5" y="144.5" text-anchor="middle">Strategic planning</text>
<rect class="tk-mm-node tk-mm-b1" x="21.5" y="166.5" width="142.5" height="33.5" rx="17"/>
<text class="tk-mm-label" x="92.5" y="188" text-anchor="middle">Argument mapping</text>
<rect class="tk-mm-node tk-mm-b2" x="727.5" y="144.5" width="58" height="33.5" rx="17"/>
<text class="tk-mm-label" x="756.5" y="166.5" text-anchor="middle">Tools</text>
<rect class="tk-mm-node tk-mm-b2" x="822" y="123" width="116" height="33.5" rx="17"/>
<text class="tk-mm-label" x="879.5" y="144.5" text-anchor="middle">Pen and paper</text>
<rect class="tk-mm-node tk-mm-b2" x="822" y="166.5" width="78.5" height="33.5" rx="17"/>
<text class="tk-mm-label" x="861" y="188" text-anchor="middle">Mermaid</text>
</svg>
